# study_fastapi

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: main.py
src/app/: __init__.py  database.py  main.py  models.py  routers.py
src/app/routers/: router_chat.py  router_debug.py  router_view.py
tests/: conftest.py  test_1.py  test_api.py  test_message.py  test_root.py  test_session.py
