[project]
name = "base-chat-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.1",
]
